sistemato logo con vertical align e chiuso il tag a aperto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div class="float-r">
                     <ul>
-                        <li><a href="">&#128269;<a></li>
+                        <li><a href="">&#128269;</a></li>
                         <li><button class="btn-1">Log in</button></li>
                         <li><button class="btn-2">GetHubspotFree</button></li>
                     </ul>
