--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <!-- sezione dei diversi hub -->
 
                 <div class="various-hub-row clearfix">
-                    <div class="col-container float-l" id="margin-left-0">
+                    <div class="col-container float-l">
                         <div class="various-hub-col white-bkg">
                             <img src="img/Marketing-Hub-Free.svg" alt="marketing hub">
                             <h2>Marketing Hub</h2>
@@ -124,8 +124,8 @@
                         </div>
                     </div>
 
-                    <div class="col-container float-l">
-                        <div class="various-hub-col white-bkg" id="margin-right-none">
+                    <div class="col-container float-l margin-5">
+                        <div class="various-hub-col white-bkg">
                             <img src="img/Sales-Professional-Illustration.svg" alt="marketing hub">
                             <h2>Sales Hub</h2>
                             <p>Time-saving sales software that helps<br>you get deeper insights into prospects,<br>automate the tasks you hate, and close<br>more deals faster</p>
@@ -141,7 +141,7 @@
                     </div>
 
                     <div class="col-container float-l">
-                        <div class="various-hub-col white-bkg" id="margin-right-0">
+                        <div class="various-hub-col white-bkg">
                             <div><img src="img/Service-Hub-Illustration.svg" alt="marketing hub"></div>
                             <h2>Service Hub</h2>
                             <p>Customer service software to help you<br>connect with customers, exceed<br>espectations, and turn them into<br>promoters that grow your business</p>
